[package]
name = "pigeon-art"
version = "0.1.1"
edition = "2018"
authors = ["Jakob Fischer <jakob@automorph.info>"]
description = "Simple non stable package for procedurally generated art"
license = "Unlicense"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
